# plant-health-classification

./: .gitignore  CONTRIBUTING.md  DINOV2_MIGRATION.md  PROJECT_SUMMARY.md  README.md  compare_models.py  evaluate.py  example.py  export_mobilenet_onnx.py  optimize_to_ort.py  prepare_background_data.py  prepare_data.py  quantize_mobilenet_onnx.py  requirements.txt  train.py
3d-desing/: camera_holder.ipt  cameraholder.iam  ladder.ipt  table.ipt
cpp/: CMakeLists.txt  CMakePresets.json  README.md  evaluate_mobilenet.cpp  infer_mobilenet.cpp  mobilenet_common.cpp  mobilenet_common.hpp
cpp/apps/live_infer_display/: main.cpp
cpp/apps/live_infer_web/: main.cpp
cpp/cmake/: embed_html.cmake  toolchain-rpi-aarch64.cmake
cpp/src/app_runtime/: interfaces.hpp  live_pipeline.cpp  live_pipeline.hpp
cpp/src/camera_libcamera/: libcamera_camera.cpp  libcamera_camera.hpp
cpp/src/core/: frame.hpp  inference_result.hpp  phc_log.hpp  rgb_normalize.hpp
cpp/src/display_drm/: drm_display.cpp  drm_display.hpp
cpp/src/display_file/: file_artifact_display.cpp  file_artifact_display.hpp
cpp/src/inference_ort/: ort_engine.cpp  ort_engine.hpp
cpp/src/mobilenet/: mobilenet_common.cpp  mobilenet_common.hpp
cpp/src/preprocess/: mobilenet_preprocess.cpp  mobilenet_preprocess.hpp  tensor.hpp
cpp/src/server_http/: embedded_index_html.hpp  http_stream_display.cpp  http_stream_display.hpp  http_stream_server.cpp  http_stream_server.hpp
cpp/tests/: CMakeLists.txt  pi_smoke_live.cpp  test_live_pipeline.cpp  test_preprocess.cpp
cpp/toolchains/gcc/: toolchain.cmake
cpp/toolchains/rpi-aarch64/: toolchain.cmake
cpp/tools/: evaluate_mobilenet.cpp  infer_mobilenet.cpp
docs/: 01_problem_definition.md  02_dataset_explanation.md  03_solution_methods.md  04_training_pipeline.md  05_results_comparison.md  EVALUATION_GUIDE.md  WHY_EFFICIENTNET.md  WHY_MOBILEVIT.md  presentation_slides.md
models/: __init__.py  efficientnet.py  fcnn.py  mobilenet_v3.py  registry.py  vit.py
results/: edge_deployment_mobilenet_report.md  result.md  rpi_zero_2w_mobilenet_onnx_cpp.md
results/report/: .latexmkrc  SWE599-Poster.tex  SWE599-Project-2026S-Savas-Yusuf.tex  SWE599-Project-Progress-2026S-Savas-Yusuf.tex  beamerthemegemini.sty  latex-watch.sh  references.bib  render-html-diagrams.sh  render-mermaid.sh
results/report/mermaid/: ondevice_runtime.html  ondevice_runtime.mmd  system_architecture.html  system_architecture.mmd  training_pipeline.html  training_pipeline.mmd
results/report/mermaid/.render/: ondevice_runtime_v2_crop.html  system_architecture_v2_crop.html  training_pipeline_v2_crop.html
results/report/scripts/: make_dataset_coco_grid.py
scripts/: analyze_image_sizes.sh  deploy_rpi_zero2w.sh  download_onnxruntime.sh  dump_ort_reference.py  sync_rpi_sysroot.sh  validate_cpp_inference.sh
utils/: __init__.py  data_loader.py  evaluation.py
web/live/: index.html
